[metadata]
name = lingorm
# Version needs regex in setup.py.
url = https://lingorm.com
project_urls =
    Documentation = https://lingorm.com
    Code = https://github.com/xiaolingzi/lingorm-python
    Issue tracker = https://github.com/xiaolingzi/lingorm-python/issues
license = MIT
author = xiaolingzi
author_email = xlne@foxmail.com
maintainer = xiaolingzi
maintainer_email = xlne@foxmail.com
description = A orm framework for python.
long_description = file: README.rst
long_description_content_type = text/x-rst